@@ -29,6 +29,8 @@
 
 ;;; Code:
 
+(require 'font-lock)
+
 ;; eclasses which use is deprecated: gcc
 
 (defvar ebuild-mode-keywords-0
