@@ -1,3 +1,8 @@
+2008-10-14  Ulrich Mueller  <ulm@gentoo.org>
+
+	* ebuild-mode-keywords.el (font-lock): Require, needed for XEmacs.
+	* eselect-mode-keywords.el (font-lock): Likewise.
+
 2008-09-26  Christian Faulhammer  <opfer@gentoo.org>
 
 	* gentoo-syntax.el (ebuild-mode-make-keywords-list): \< \> around
